--- a/frontend/frontend/package.json
+++ b/frontend/frontend/package.json
@@ -15,7 +15,8 @@
     "bulma": "^1.0.4",
     "ol": "^10.5.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "styled-components": "^6.1.19"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
